# mlboard

./: .gitignore  README.md  build.sh  docker-compose-build.yml  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.overide.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
app/: .flake8  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  api.py  app.py  app.yml  dask.config.yml  demo.py  dev-requirements.in  dev-requirements.txt  dev_requirements.txt  gather.py  mlboard.yml  mypy.ini  onikuflow.db  onikuflow.yml  pytest.ini  requirements.in  requirements.txt  setup.py  start_api.sh  stress_test.py  task.py  test.sh  watch.sh
app/.pytype/: .ninja_log  build.ninja
app/.pytype/imports/: loglog.__init__.imports  loglog.api.__init__.imports  loglog.api.services.chamber.imports  loglog.api.services.process.imports  loglog.core.__init__.imports  loglog.core.database.imports  loglog.core.models.__init__.imports  loglog.utils.__init__.imports  (+29 more)
app/examples/: demo.rs  mq.rs
app/mlboard/: __init__.py  config.py  encoders.py  exceptions.py  queries.py
app/mlboard_api/: view.py
app/onikuflow/: __init__.py  alembic.ini  config.py  encoders.py  initdb.py  session.py  view.py  webapi.py
app/scenarios/: add_trace.py
app/senarios/: add_trace.py
app/src/: entities.rs  error.rs  lib.rs  main.rs  usecase.rs  web.rs
app/stubs/: numpy.pyi  pandas.pyi
app/tests/: __init__.py  fixtures.py  test_api.py  test_base_layers.py  test_config.py  test_initdb.py  test_keras_model.py  test_query_api.py  test_restore_model.py  usecase_test.rs
app_rust/: Cargo.toml  Dockerfile  amazon.cer  cacert.crt  index.html  watch.sh
app_rust/benches/: bench.rs
app_rust/src/: lib.rs  main.rs  models.rs
(+796 files in other folders)
