[package]
name = "app"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
postgres = { version = "0.17.0", features = ["with-uuid-0_8", "with-chrono-0_4"] }
tokio-postgres = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
csv = "1.1.1"
rayon = "1.2.1"
tokio = { version = "0.2", features = ["full"] }
async-std = "1.4.0"
async-trait = "0.1.22"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
failure = "0.1.6"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
