[package]
name = "app"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "0.5.2", features = ["with-uuid-0_8", "with-chrono-0_4"] }
deadpool-postgres = "0.5.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
failure = "0.1.7"
env_logger = "0.7.1"
async-trait = "0.1.24"
futures = "0.3"


