[package]
name = "app"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

[dependencies]
postgres = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
csv = "1.1"
rayon = "1.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
